--- a/OURganizer-Project/src/main/resources/templates/login.html
+++ b/OURganizer-Project/src/main/resources/templates/login.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Registration and Login App</title>
-
+<title>OURganizer</title>
+<link th:href="@{/css/style.css}" rel="stylesheet"/>
 <link rel="stylesheet"
  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -13,28 +13,25 @@
 <body>
 
  <!-- create navigation bar ( header) -->
- <nav class="navbar navbar-inverse navbar-fixed-top">
+ <nav class="navbar nav1 navbar-fixed-top ">
   <div class="container">
    <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed"
-     data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-     aria-controls="navbar">
-     <span class="sr-only">Toggle navigation</span> <span
-      class="icon-bar"></span> <span class="icon-bar"></span> <span
-      class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="#" th:href="@{/}">OURganizer</a>
+    <a class="navbar-brand header" href="#" th:href="@{/}">OURganizer: Your Personal Organizer</a>
    </div>
   </div>
  </nav>
  
  <br>
  <br>
+ <div class="logo container">
+ <img  th:src="@{/images/logo.png}" alt="logo"/>
+ </div>
+ 
  <div class = "container">
   <div class = "row">
    <div class = "col-md-6 col-md-offset-3">
     
-    <h1> Login Here: </h1>
+    <h1> Login: </h1>
     <form th:action="@{/login}" method="post">
      
      <!-- error message -->
@@ -76,5 +73,6 @@
    </div>
   </div>
  </div>
+
 </body>
 </html>
