adding routes for credentials/websites, adding the corresponding html pages

--- a/OURganizer-Project/src/main/resources/templates/credentials.html
+++ b/OURganizer-Project/src/main/resources/templates/credentials.html
@@ -9,37 +9,23 @@
  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
  crossorigin="anonymous">
-
 </head>
 <body>
+
  <!-- create navigation bar ( header) -->
  <nav class="navbar nav1 navbar-fixed-top">
   <div class="container">
    <div class="navbar-header">
     <a class="navbar-brand header" href="#" th:href="@{/}">OURganizer</a>
    </div>
-   <div id="navbar" class="logout">
-    <ul class="nav navbar-nav logout">
-     <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>
-    </ul>
-   </div>
   </div>
  </nav>
-
- <br>
- <br>
-
- <div class="container intro">
- <h3 class="welcome">Welcome <span sec:authentication="principal.username"> User</span></h3>
-  <h1>Welcome to your dashboard! Here you can manage your login credentials to any website or service of your choosing, 
-  along with the option to store frequently used websites.</h1>
- </div>
- <div class="btnHolder">
-    <a class="buttons" href="/" th:href="@{/credentials}">Credentials Portal</a>
-     <a class="buttons" href="/" th:href="@{/websites}">Website's Portal</a>
-
- </div>
  
+ <br>
+ <br>
+ <br>
+ <h1>Store your data securely below!</h1>
 
+ 
 </body>
 </html>
