--- a/OURganizer-Project/src/main/resources/static/css/style.css
+++ b/OURganizer-Project/src/main/resources/static/css/style.css
@@ -1,6 +1,5 @@
 h1 {
 	font-weight: bold;
-	text-decoration: underline;
 }
 body{
 	margin: 0;
@@ -33,16 +32,24 @@ body{
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	height: 900px;
 }
 .btnHolder{
 	display: flex;
     justify-content: center;
     border-bottom: 1px solid black;
     padding: 10px;
+    margin-bottom: 50px;
 }
+.welcome {
+	padding: 20px;
+	margin: auto;
+	text-decoration: underline;
+}
+
 .buttons {
-	height: 180px;
-    width: 180px;
+	height: 250px;
+    width: 250px;
     justify-content: center;
     padding: 0.46em 1.6em;
     border: 0.1em solid #000000;
@@ -50,7 +57,7 @@ body{
     border-radius: 0.12em;
     box-sizing: border-box;
     text-decoration: none;
-    font-size: 26px;
+    font-size: 28px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 300;
     color: #000000;
