crud operations working, created views and add credentials features. Next is delete/update operations on services table, and adding fkey to user that is services table

--- a/OURganizer-Project/src/main/resources/templates/index.html
+++ b/OURganizer-Project/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
   along with the option to store frequently used websites.</h1>
  </div>
  <div class="btnHolder">
-    <a class="buttons" href="/" th:href="@{/credentials}">Credentials Portal</a>
+    <a class="buttons" href="/" th:href="@{/api/credentials}">Credentials Portal</a>
      <a class="buttons" href="/" th:href="@{/websites}">Website's Portal</a>
 
  </div>
