--- a/OURganizer-Project/src/main/resources/templates/credentials.html
+++ b/OURganizer-Project/src/main/resources/templates/credentials.html
@@ -26,6 +26,28 @@
  <br>
  <h1>Store your data securely below!</h1>
 
+	<div  class="container my-2">
+ 	 <h1>Your Credentials</h1>
+ 	 
+ 	 <a th:href = "@{/api/addCredentials}" class="btn btn-primary btn-sm mb-3"> Add Credentials </a>
+ 	 
+ 	<table border="1" class="table table-striped table-responsive-md">
+ 		<thead>
+ 			<tr>
+ 				<th>Service Name</th>
+ 				<th>Username/Email</th>
+ 				<th>Password</th>
+ 	</tr>
+ 	</thead>
+ 	<tbody>
+ 		<tr th:each="services : ${listServices}">
+					<td th:text="${services.serviceName}"></td>
+					<td th:text="${services.userName}"></td>
+					<td th:text="${services.password}"></td>
+				</tr>
+ 	</tbody>
+ 	</table>
+ 	</div>
  
 </body>
 </html>
