cleaning up some html/css

--- a/OURganizer-Project/src/main/resources/templates/credentials.html
+++ b/OURganizer-Project/src/main/resources/templates/credentials.html
@@ -29,13 +29,13 @@
 	<div  class="container my-2">
  	 <h1>Your Credentials</h1>
  	 
- 	 <a th:href = "@{/api/addCredentials}" class="btn btn-primary btn-sm mb-3"> Add Credentials </a>
+ 	 <a th:href = "@{/api/addCredentials}" class="btn btn-primary btn-sm mb-3"> Add a Provider </a>
  	 
  	<table border="1" class="table table-striped table-responsive-md">
  		<thead>
  			<tr>
- 				<th>Service Name</th>
- 				<th>Username/Email</th>
+ 				<th>Service Provider</th>
+ 				<th>Username or Email</th>
  				<th>Password</th>
  	</tr>
  	</thead>
