--- a/OURganizer-Project/src/main/resources/static/css/style.css
+++ b/OURganizer-Project/src/main/resources/static/css/style.css
@@ -22,6 +22,10 @@ body{
 	text-align: left;
 	color:white;
 }
+.center {
+	text-align: center;
+	text-decoration: underline;
+}
 
 .logout {
 	background-color: white;
@@ -32,7 +36,11 @@ body{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 900px;
+	border: 2px solid teal;
+}
+.intro1 {
+	align-items:center;
+	justify-content:center;
 }
 .btnHolder{
 	display: flex;
@@ -48,8 +56,8 @@ body{
 }
 
 .buttons {
-	height: 250px;
-    width: 250px;
+	height: 200px;
+    width: 200px;
     justify-content: center;
     padding: 0.46em 1.6em;
     border: 0.1em solid #000000;
