--- a/OURganizer-Project/src/main/resources/templates/credentials.html
+++ b/OURganizer-Project/src/main/resources/templates/credentials.html
@@ -24,8 +24,9 @@
  <br>
  <br>
  <br>
+ <div class="center">
  <h1>Store your data securely below!</h1>
-
+</div>
 	<div  class="container my-2">
  	 <h1>Your Credentials</h1>
  	 
