adding update credentials functionality, toying with db relationships that are not quite working correctly

--- a/OURganizer-Project/src/main/resources/templates/credentials.html
+++ b/OURganizer-Project/src/main/resources/templates/credentials.html
@@ -38,6 +38,7 @@
  				<th>Service Provider</th>
  				<th>Username or Email</th>
  				<th>Password</th>
+ 				<th>Actions</th>
  	</tr>
  	</thead>
  	<tbody>
@@ -45,6 +46,9 @@
 					<td th:text="${services.serviceName}"></td>
 					<td th:text="${services.userName}"></td>
 					<td th:text="${services.password}"></td>
+					<td> <a th:href="@{/api/updateService/{id}(id=${services.id})}" class="btn btn-primary">Update</a>
+					    <a th:href="@{/api/deleteService/{id}(id=${services.id})}" class="btn btn-danger">Delete</a>
+					    </td>
 				</tr>
  	</tbody>
  	</table>
