update service working properly, reroutes back to credentials page.

--- a/OURganizer-Project/src/main/resources/templates/credentials.html
+++ b/OURganizer-Project/src/main/resources/templates/credentials.html
@@ -46,7 +46,7 @@
 					<td th:text="${services.serviceName}"></td>
 					<td th:text="${services.userName}"></td>
 					<td th:text="${services.password}"></td>
-					<td> <a th:href="@{/api/updateService/{id}(id=${services.id})}" class="btn btn-primary">Update</a>
+					<td> <a th:href="@{/api/update/{id}(id=${services.id})}" class="btn btn-primary">Update</a>
 					    <a th:href="@{/api/deleteService/{id}(id=${services.id})}" class="btn btn-danger">Delete</a>
 					    </td>
 				</tr>
