--- a/OURganizer-Project/src/main/resources/templates/updateService.html
+++ b/OURganizer-Project/src/main/resources/templates/updateService.html
@@ -16,7 +16,7 @@
 		<form th:action="@{/api/updateService/{id} (id=${services.id})}"
 		 th:object="${services}" method="POST">
 			
-			<!-- Add hidden form field to handle update -->
+			<!--hidden form field to handle update-->
 			<input type="hidden" th:field="*{id}" />
 			
 			<input type="text" th:field="*{serviceName}" class="form-control mb-4 col-4">
