--- a/OURganizer-Project/src/main/resources/templates/login.html
+++ b/OURganizer-Project/src/main/resources/templates/login.html
@@ -23,8 +23,8 @@
  
  <br>
  <br>
- <div class="logo container">
- <img  th:src="@{/images/logo.png}" alt="logo"/>
+ <div class="container">
+ <img class="logo" th:src="@{/images/logo.png}" alt="logo"/>
  </div>
  
  <div class = "container">
