front end views for websites completed, all functionality working as intended besides <a> tags routing to localhost

--- a/OURganizer-Project/src/main/resources/templates/index.html
+++ b/OURganizer-Project/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
  
  <div class="btnHolder">
     <a class="buttons" href="/" th:href="@{/api/credentials}">Credentials Portal</a>
-     <a class="buttons" href="/" th:href="@{/websites}">Website's Portal</a>
+     <a class="buttons" href="/" th:href="@{/api/websites}">Website's Portal</a>
 
  </div>
 
