--- a/OURganizer-Project/src/main/resources/templates/websites.html
+++ b/OURganizer-Project/src/main/resources/templates/websites.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
 <meta charset="ISO-8859-1">
 <title>OURganizer</title>
@@ -23,9 +24,35 @@
  <br>
  <br>
  <br>
- 
- <h1>Save your frequently navigated websites here!</h1>
-
+ <div class="center">
+ <h1>Store your data securely below!</h1>
+</div>
+	<div  class="container my-2">
+ 	 <h1>Your Credentials</h1>
+ 	 
+ 	 <a th:href = "@{/api/addWebsites}" class="btn btn-primary btn-sm mb-3"> Add a Website </a>
+ 	 
+ 	<table border="1" class="table table-striped table-responsive-md">
+ 		<thead>
+ 			<tr>
+ 				<th>Website Name</th>
+ 				<th>URL</th>
+ 	</tr>
+ 	</thead>
+ 	<tbody>
+ 		<tr th:each="websites : ${listWebsites}">
+					<td th:text="${websites.websiteName}"></td>
+						<td>
+   					 <a th:href="${websites.url}" th:text="${websites.url}" target="_blank"></a>
+						</td>
+						<td> <a th:href="${websites.url}" target="_blank">Click Me</a></td>
+					<td> <a th:href="@{/api/updateWeb/{id}(id=${websites.id})}" class="btn btn-primary">Update</a>
+					    <a th:href="@{/api/deleteWebsite/{id}(id=${websites.id})}" class="btn btn-danger">Delete</a>
+					    </td>
+				</tr>
+ 	</tbody>
+ 	</table>
+ 	</div>
  
 </body>
 </html>
