touching up dashboard styling

--- a/OURganizer-Project/src/main/resources/templates/index.html
+++ b/OURganizer-Project/src/main/resources/templates/index.html
@@ -30,9 +30,11 @@
  <br>
 
  <div class="container intro">
- <h3 >Welcome! <span class="welcome" sec:authentication="principal.username"> User</span></h3>
+ <h3 class="dashboardTxt" >Welcome! <span class="welcome" sec:authentication="principal.username"> User</span></h3>
  
-  <h1>Welcome to your dashboard! Here you use either portals to store either frequently visited url's in the website's portal
+  <h1 class="dashboardTxt">Welcome to your dashboard!</h1>
+  
+  <h1 class="dashboardTxt"> Here you use either portals to store either frequently visited url's in the website's portal
    or store login information for commonly used services (ex. Amazon, Yahoo, Gmail).</h1>
   </div>
   
