--- a/OURganizer-Project/src/main/resources/static/css/style.css
+++ b/OURganizer-Project/src/main/resources/static/css/style.css
@@ -5,6 +5,9 @@ body{
 	margin: 0;
 }
 
+.dashboardTxt {
+	padding: 20px;
+}
 .logo {
 	height:auto;
 	width:auto;
@@ -36,7 +39,7 @@ body{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	border: 5px solid teal;
+	border: 3px solid teal;
 }
 .intro1 {
 	align-items:center;
@@ -45,9 +48,10 @@ body{
 .btnHolder{
 	display: flex;
     justify-content: center;
-    border-bottom: 1px solid black;
-    padding: 10px;
-    margin-bottom: 50px;
+    padding: 80px;
+    height: 400px;
+    align-items: center;
+   
 }
 .welcome {
 	padding: 20px;
